# genie3-knobs

./: .gitignore  README.md  config.py  conftest.py  pyproject.toml  requirements.txt  setup_genie3_submodule.sh
baselines/: __init__.py  contextual_bandit.py  fixed_heuristic.py  random_policy.py
buffer/: __init__.py  frontier_buffer.py
envs/: __init__.py  commitment_window.py  genie_branch_env.py
experiments/: RESULTS.md  __init__.py  _harness.py  benchmark_frontier_seeding.py  compare_full_levers.py  compare_timestep_lever.py  contrast_bhrf1_insulinr.py  fill_lever_grid.py  finetune_genie3_lora.py  fk_correlation_test.py  fk_vs_ppo_offline.py  ppo_vs_bandit_offline.py  stage1_timestep_only.py  stage2_full_levers.py  stage3_target_contrast.py  target_onehot_ablation.py  train_intervention_policy.py  validate_live_oracle.py  window_start_ablation.py  window_start_sweep.py  xt_state_probe.py
instrumentation/: __init__.py  trajectory_logger.py
oracle/: __init__.py  branching_wrapper.py  live_oracle.py  reward_oracle.py
policy/: __init__.py  fk_steering.py  lora_finetune.py  train_ppo.py
reward/: __init__.py  design.md  developability.py  retro_metrics.py  reward_designs.py  test_reward_designs.py  tier_a_form_ablation.py  tier_b_ranking_validity.py
tests/: __init__.py  test_baselines.py  test_commitment_window.py  test_contextual_bandit_windowed.py  test_dataset_ingest.py  test_env.py  test_fk_steering.py  test_frontier_buffer.py  test_live_oracle.py  test_lora_finetune.py  test_reward_oracle.py
